Update Index.html of Digital Clock Project

--- a/Digital Clock/Index.html
+++ b/Digital Clock/Index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digital Clock</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+    <div id="center">
+        <h1>Your Local Time<h1>
+        <div id="clock"></div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
